tests/ui/moves/no-reuse-move-arc.stderr
error[E0382]: borrow of moved value: `arc_v`
  --> $DIR/no-reuse-move-arc.rs:13:18
   |
LL |     let arc_v = Arc::new(v);
   |         ----- move occurs because `arc_v` has type `Arc<Vec<i32>>`, which does not implement the `Copy` trait
LL |
LL |     thread::spawn(move|| {
   |                   ------ value moved into closure here
LL |         assert_eq!((*arc_v)[3], 4);
   |                      ----- variable moved due to use in closure
...
LL |     assert_eq!((*arc_v)[2], 3);
   |                  ^^^^^ value borrowed here after move
   |
   = note: borrow occurs due to deref coercion to `Vec<i32>`
help: consider cloning the value before moving it into the closure
   |
LL ~     let value = arc_v.clone();
LL ~     thread::spawn(move|| {
LL ~         assert_eq!((*value)[3], 4);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
